# The-Librarian

./: .gitignore  README  pyproject.toml
app/: main.py
services/: data_loader.py  vector_db.py
